<resources>
    <string name="app_name">健德视播</string>
    <string name="tv_photo">头像</string>
    <string name="bt_capture">拍照</string>
    <string name="bt_album">相册</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_home">视频</string>
    <string name="bt_attention">关注</string>
    <string name="bt_message">消息</string>
    <string name="bt_me">我的</string>
    <string name="switch_attention">关注的人</string>
    <string name="switch_video">视频列表</string>
    <string name="title_fans">粉丝</string>
    <string name="title_support">赞</string>
    <string name="title_comment">评论和@</string>
    <string name="textview_foot">加载更多数据</string>
    <string name="bt_serach">搜索</string>
    <string name="bt_info">菜单</string>
    <string name="tv1_info">关于我们</string>
    <string name="tv2_info">用户协议</string>
    <string name="tv3_info">账号管理</string>
    <string name="tv4_info">通知管理</string>
    <string name="tv5_info">检测更新</string>
    <string name="tv6_info">退出登录</string>
    <string name="tv_attention_list">关注的人</string>
    <string name="tv_fans_message">关注了你</string>
    <string name="tv_attentionpersonvideo_sendmessage">添加评论...</string>
    <string name="tv_likelist_message">点赞了你的作品</string>
    <string name="tv_video_list">视频列表</string>
    <string name="tv_history_tttle">历史消息列表</string>
    <string name="tv_attentionperson_name">账号</string>
    <string name="bt_sendcomment">发送</string>
    <string name="et_changecomment">说点什么吧</string>
    <string name="tv_allcomment">全部评论</string>
    <string name="message_comment">评论</string>
    <string name="bt_location">定位</string>
    <string name="attention_editext">关键词搜索</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_identity_code">请输入验证码</string>
    <string name="register_get_identitycode">获取验证码</string>
    <string name="register_password">请设置密码</string>
    <string name="register_confirm_password">请确认密码</string>
    <string name="user_register">注册</string>
    <string name="user_login">登录</string>
    <string name="user_changepassword">请输入当前密码</string>
    <string name="user_confirm_changepassword">请输入新密码</string>
    <string name="user_confirm_password">确认修改</string>
    <string name="channel_all">全部</string>
    <string name="channel_samecity">同城</string>
    <string name="channel_recommend">推荐</string>
    <string name="channel_Superman">大V</string>
    <string name="attentionperson_account">账号:</string>
    <string name="personinfo_title">编辑个人资料</string>
    <string name="personinfo_save">保存</string>
    <string name="personinfo_toptitle">编辑</string>
    <string name="personinfo_nickname">昵称</string>
    <string name="personinfo_sex">性别</string>
    <string name="personinfo_account">账号</string>
    <string name="personinfo_personalname">签名</string>
    <string name="personinfo_birthday">生日</string>
    <string name="personinfo_city">城市</string>
    <string name="default_setting">未设置</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="ed_userinfo">请输入修改内容</string>
    <string name="bt_eidtorcancel">取消</string>
    <string name="bt_eidtorconfirm">确定</string>
    <string name="tv_emptylike">还没有点赞消息哦</string>
    <string name="tv_emptycommnet">还没有评论消息哦</string>
    <string name="tv_emptyfans">还没有粉丝哦</string>
    <string name="tv_logincontent">未登录，请先登录！</string>
    <string name="tv_downbgm">即将开始下载该歌曲</string>
    <string name="me_editorinfo">编辑资料</string>
    <string name="me_personaltitle">个性签名：</string>
    <string name="me_zantitle">获赞</string>
    <string name="me_zuoping">作品</string>
    <string name="me_caogao">草稿</string>
    <string name="find_user">用户</string>
    <string name="bt_checkupdate">检查更新</string>
    <string name="tv_versioninfo">版本信息</string>
    <string name="tv_resetpassword">重置密码</string>
    <string name="bt_at">"@"</string>
    <string name="tv_firstimg">视频封面</string>
    <string name="tv_limitinput">0/20</string>
    <string name="hint_message">点击添加描述(最多20个字)</string>
    <string name="hint_foodid">点击添加商品id</string>
    <string name="bt_publishvideo">发布</string>
    <string name="tv_welcomecontent">3s跳过</string>
    <string name="tv_systemmessage">消息助手</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="done">完成</string>
    <string name="close">关闭</string>
    <string name="tidal_pat_upload_se_soul_out">灵魂出窍</string>
    <string name="tidal_pat_upload_se_time_back">时光倒流</string>
    <string name="tidal_pat_upload_se_un_state">无</string>
    <string name="tidal_pat_filter_original">原图</string>
    <string name="tidal_pat_filter_bw_03">黑白</string>
    <string name="tidal_pat_filter_cf_17">鲜艳</string>
    <string name="tidal_pat_filter_cf_19">温暖</string>
    <string name="tidal_pat_filter_fm_05">初夏</string>
    <string name="tidal_pat_filter_fm_10">时光</string>
    <string name="tidal_pat_filter_fs_10">小清新</string>
    <string name="tidal_pat_filter_ins_02">怀旧</string>
    <string name="tidal_pat_filter_mod_09">摩登</string>
    <string name="tidal_pat_filter_re_03">复古风</string>
    <string name="tidal_pat_filter_sf_03">柔和</string>
    <string name="tidal_pat_hui">潮人汇</string>
    <string name="tidal_pat_music">人气音乐</string>
    <string name="tidal_pat_click_more">点击查看\n更多内容</string>
    <string name="nearby_tidal_pat">附近潮人</string>
    <string name="new_tidal_pat">新人新潮</string>
    <string name="hipsters_play_number">播放次数：</string>
    <string name="populairy_music_use_times">使用次数：</string>
    <string name="news_hipster_content">这些都是嘿吼的最新潮人,观看视频膜拜下吧~</string>
    <string name="tidal_pat_hint">喜欢就要说出来</string>
    <string name="tidal_pat_cut_music">选音乐</string>
    <string name="tidal_pat_cover_selected">选封面</string>
    <string name="tidal_pat_volume">音量</string>
    <string name="tidal_pat_special_effects">特效</string>
    <string name="tidal_pat_beauty">美颜</string>
    <string name="tidal_pat_beauty_open">美颜开</string>
    <string name="tidal_pat_beauty_close">美颜关</string>
    <string name="tidal_pat_filter">滤镜</string>
    <string name="tidal_pat_count_down">倒计时</string>
    <string name="tidal_pat_cut_audio_hint">左右拖动声谱剪取音乐</string>
    <string name="tidal_pat_record_delete_video_out">删除内容并退出</string>
    <string name="tidal_pat_record_reset">重新拍摄</string>
    <string name="tidal_pat_record_reset_recording">重新录制</string>
    <string name="tidal_pat_record_save_draft">保存草稿</string>
    <string name="tidal_pat_record_share_qzone">QQ空间</string>
    <string name="tidal_detail_selection">精选</string>
    <string name="tidal_detail_save_draft_succeed">已保存至草稿箱</string>
    <string name="tidal_detail_upload_not_audio">视频原声</string>
    <string name="tidal_detail_upload_video_not_find">文件不存在</string>
    <string name="tidal_pat_record_check_audio_permission">请检查录音权限</string>
    <string name="tidal_pat_uploading">上传中</string>
    <string name="tidal_pat_uploading_">上传中...</string>
    <string name="tidal_pat_upload_succeed">发布成功</string>
    <string name="tidal_pat_upload_fail">发布失败了，请重试</string>
    <string name="tidal_pat_upload_succeed_add">+50积分</string>
    <string name="tidal_pat_upload_succeed_add_format">+%d积分</string>
    <string name="tidal_pat_upload_title_sensitive">标题包含敏感词</string>
    <string name="tidal_pat_upload_remove_hint">删除该视频？</string>
    <string name="tidal_pat_record_combining">合成中...</string>
    <string name="tidal_pat_record_music_cutting">裁剪中...</string>
    <string name="tidal_pat_draft_title">草稿箱</string>
    <string name="tidal_pat_draft_clear_tip">清空</string>
    <string name="tidal_pat_draft_edit_tip">编辑</string>
    <string name="tidal_pat_draft_clear_msg">确认清空草稿文件?</string>
    <string name="tidal_pat_draft_delete_msg">确定删除该草稿文件?</string>
    <string name="tidal_pat_draft_no_title_tip">暂无标题</string>
    <string name="music_draft_no_title_tip">暂无歌曲名称</string>
    <string name="tidal_pat_draft_local_video_tip">本地上传视频不支持编辑</string>
    <string name="tidal_pat_give_up_alter_hint">放弃编辑？</string>
    <string name="tidal_pat_delete_succeed">删除成功</string>
    <string name="tidal_pat_delete_fail">删除失败了</string>
    <string name="tidal_pat_record_unfinished_hint">你有未编辑完成的视频，是否继续？</string>
    <string name="recording_studio_unfinished_hint">你有未完成的录音，是否继续？</string>
    <string name="tidal_pat_record_original_sound">原声</string>
    <string name="tidal_pat_record_background_music">配乐</string>
    <string name="tidal_pat_music_share_title_format">我在嘿吼参加@%1$s....超多有趣Hiphop说唱，赶快来参加</string>
    <string name="tidal_pat_music_share_flag">嘿吼-Hiphop说唱社区</string>
    <string name="tidal_pat_save_to_local">同时保存到本地</string>
    <string name="edit_text_max_length_hint">最多只能输入%1$d个字符</string>
    <string name="edit_text_max_length_hint_not_line_feed">不支持换行</string>
    <string name="tidal_pat_add_topic">添加挑战</string>
    <string name="tidal_pat_add_call_friend">\&#064;&#160;好友</string>
    <string name="tidal_pat_upload_fail_save">上传失败，已保存到草稿箱</string>
    <string name="tidal_pat_upload_fail_hint">上传失败</string>
    <string name="tidal_pat_upload_fail_because_uploading">你有作品正在上传，请上传成功后再发布</string>
    <string name="tidal_pat_record_delete_video_confirm">确认删除上一段视频？</string>
    <string name="tidal_pat_record_give_up_upload">放弃发布？</string>
    <string name="tidal_pat_upload_call_friend_exist">你已经\&#064;过他了</string>
    <string name="tidal_pat_upload_call_friend_max_count">最多只能\&#064;%1$d个人哦~</string>
    <string name="tidal_pat_upload_call_friend_cant_me">不能\&#064;自己</string>
    <string name="tidal_pat_upload_position_selected_hint">选择位置后，按住使用效果</string>
    <string name="tidal_pat_upload_time_back_hint">点击选择时间特效</string>
    <string name="tidal_pat_upload_se_filter">滤镜特效</string>
    <string name="tidal_pat_upload_se_time">时间特效</string>
    <string name="tidal_pat_upload_play_error">播放出现异常，请重试</string>
    <string name="tidal_pat_upload_combine_error">视频合成失败了，请重试</string>
    <string name="tidal_pat_upload_clear_se_hint">是否清除已添加特效？</string>
    <string name="tidal_pat_upload_clear_se_exit_hint">继续拍摄之前的特效会被清空，是否继续拍摄？</string>
    <string name="tidal_pat_upload_clear_se_remove">撤销</string>
    <string name="tidal_pat_record_time_15">60秒</string>
    <string name="tidal_pat_record_time_120">2分钟</string>
    <string name="tidal_pat_record_time_120_not_background_music">2分钟视频无背景音乐</string>
    <string name="tidal_pat_record_time_second">秒</string>
    <string name="tidal_pat_record_change_time_mode_hint">正在拍摄中，请勿切换</string>
    <string name="tidal_pat_crop_video_edit_hint">本地上传视频不支持继续拍摄，是否放弃编辑？</string>
    <string name="tidal_pat_crop_video_selected_time">已选取%1$d秒</string>
    <string name="tidal_pat_crop_video_make_data_fail">解析数据出现错误，暂不支持该视频</string>
    <string name="tidal_pat_crop_video_make_data_format_fail">暂不支持该视频格式</string>
    <string name="tidal_pat_crop_video_make_loading">奋力处理中...</string>
    <string name="personal_show_record_video_combine_fail">合成失败了,请重试</string>
    <string name="personal_show_upload_video">保存到本地</string>
    <string name="personal_show_upload_video_delete">删除</string>
    <string name="personal_show_please_input_video_title">请输入标题</string>
    <string name="personal_show_combining_hint">合成中，请稍等...</string>
    <string name="personal_show_music_download">下载</string>
    <string name="personal_show_music_download_done">已下载</string>
    <string name="personal_show_music_selector_disposing">正在处理...</string>
    <string name="personal_show_upload_video_personal_show">预览</string>
    <string name="personal_show_camera_open_fail">操作失败，请检查权限</string>
    <string name="personal_show_download_fail_not_net">网络状态不佳，请查看设置</string>
    <string name="personal_loading">正在加载...</string>
    <string name="home_data_error">数据出现异常，请重试</string>
    <string name="home_play_time_minute">分</string>
    <string name="home_play_time_hour">时</string>
    <string name="home_play_time_sec">秒</string>
    <string name="please_input_password">请输入密码</string>
</resources>