<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">
    <Button
        android:id="@+id/bt_capture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:textSize="25sp"
        android:text="@string/bt_capture"/>
    <Button
        android:id="@+id/bt_album"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:textSize="25sp"
        android:text="@string/bt_album"/>
    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:textSize="25sp"
        android:text="@string/bt_cancel"/>
    </LinearLayout>
</LinearLayout>