<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="200dp"
    android:background="@color/color_indicator">

    <TextView
        android:id="@+id/tv_edititle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/personinfo_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:gravity="center"/>
    <View
        android:id="@+id/editinfo_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_edititle"
        android:background="@color/gray_normal"/>
    <EditText
        android:id="@+id/et_editinfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/ed_userinfo"
        android:textSize="16sp"
        android:layout_below="@id/editinfo_line1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textColorHint="@color/gray_normal"
        android:background="@null"
        android:layout_marginEnd="20dp"/>
    <Button
        android:id="@+id/bt_editorcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt_eidtorcancel"
        android:layout_below="@id/et_editinfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/bt_editorconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt_eidtorconfirm"
        android:layout_below="@id/et_editinfo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>