<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@mipmap/toolbar_background">

        <com.am.shortVideo.view.StatusBarHeightView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:use_type="use_padding_top">

            <include layout="@layout/fans_title" />

        </com.am.shortVideo.view.StatusBarHeightView>

    </RelativeLayout>

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:hint="@string/register_phone"
        android:textColor="@color/text_333333"
        android:textColorHint="@color/text_babcc1"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_666666" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/et_identify_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_identity_code"
            android:textColor="@color/text_333333"
            android:textColorHint="@color/text_babcc1"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/select_get_code_bg"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/register_get_identitycode"
            android:textSize="12dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_666666" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="@color/text_333333"
        android:textColorHint="@color/text_babcc1"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_666666" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/text_333333"
        android:textColorHint="@color/text_babcc1"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_666666" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_round_da6464"
        android:gravity="center"
        android:text="@string/user_register"
        android:textColor="@color/white"
        android:textSize="18dp" />


</LinearLayout>