<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_dark_white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@mipmap/toolbar_background">

        <com.am.shortVideo.view.StatusBarHeightView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:use_type="use_padding_top">

            <include layout="@layout/personinfo_title" />

        </com.am.shortVideo.view.StatusBarHeightView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_publishview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_firstimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_publishview"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tv_firstimg"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/rl_editext"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/tv_firstimg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/ed_inputthinking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/hint_message"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:textColorHint="@color/gray_normal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_limitinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/tv_limitinput"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_inputfoodid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rl_editext"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/hint_foodid"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_normal"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_publishvideo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/publishvideo_shape"
        android:gravity="center"
        android:text="@string/bt_publishvideo"
        android:textColor="@color/black"
        android:textSize="20sp" />
</RelativeLayout>