<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@mipmap/toolbar_background">

        <com.am.shortVideo.view.StatusBarHeightView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:use_type="use_padding_top">

            <include layout="@layout/fans_title" />

        </com.am.shortVideo.view.StatusBarHeightView>

    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/app_icon" />

    <EditText
        android:id="@+id/login_inputphone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorWhite"
        android:hint="@string/register_phone"
        android:textColor="@color/text_333333"
        android:textColorHint="@color/text_babcc1"
        android:textSize="18dp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/text_666666" />

    <EditText
        android:id="@+id/login_inputpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorWhite"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:textColor="@color/text_333333"
        android:textColorHint="@color/text_babcc1"
        android:textSize="18dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/text_666666" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="15dp"
        android:text="@string/user_register"
        android:textColor="@color/text_333333"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_round_da6464"
        android:gravity="center"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>